чуть подправил титуль и заголовки

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Портфолио Junior верстальщика</title>
+    <title>Человек и кошка</title>
   </head>
 
   <body>
    <div class="container"> <header class="page-header">
-         Контакты в шапке
+    <p type="tel"><a href="79051207515">79051207515</a></p>
        </header></div>
    
     <div class="container">
        <section class="hero-image">
-         <h1 class="heading">Опознанный Енот</h1>
+         <h1 class="heading">Йобанный пиздец</h1>
          <p>Junior верстальщик</p>
        </section></div>
    
