--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Человек и кошка</title>
+    <title>Любоффффф</title>
   </head>
 
   <body>
    <div class="container"> <header class="page-header">
-    <p type="tel"><a href="79051207515">79051207515</a></p>
+    <p>Любовная любовь</p>
        </header></div>
    
     <div class="container">
        <section class="hero-image">
-         <h1 class="heading">Йобанный пиздец</h1>
-         <p>Junior верстальщик</p>
+         <h1 class="heading">Я Тебя Люблю</h1>
+         <p>ЛЮБЛЮ</p>
        </section></div>
    
    <div class="container">
